# webbtraders

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: market_data.csv  signals.csv
src/: bar.hpp  definitions.hpp  share.hpp  shareProcessor.hpp  stockParser.hpp  strategy.hpp
src/python/: generate_prices.py
